<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">现场执法</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">移动执法终端</string>
    <string name="read__ship_card">读船舶卡</string>
    <string name="type_ship_card">输入船舶号</string>
    <string name="developing">开发中</string>
    <string name="ship_info_basic">船舶基本信息</string>
    <string name="ship_info_sign">船舶签到信息</string>
    <string name="ship_info_illegal">船舶违章信息</string>
    <string name="ship_info_pay">船舶缴费信息</string>
    <string name="read_boatman_card">读船员卡</string>
    <string name="type_boatman_card">输入船员号</string>
    <string name="new_ship">新船舶登记</string>
    <string name="new_boatman">新船员登记</string>
    <string name="current_map">河面监控</string>
    <string name="ship_m">船舶管理</string>
    <string name="boatman_m">船员管理</string>
    <string name="realtime">实时监控</string>
    <string name="accident">事故处理</string>
    <string name="realtime_map">实时航道图</string>
    <string name="call_center">呼叫服务</string>
    <string name="accident_register">事故登记</string>
    <string name="patrol_task">巡查任务</string>
    <string name="loading">地图加载中</string>
    <string name="boat_name">沪A 24098</string>
    <string name="evidence">现场取证</string>
    <string name="more">更多  </string>
    
    
    <string name="hello">Hello World, WeatherWebServiceActivity!</string>
    <string name="title">天气预报</string>
    <string name="city">城市</string>
    <string name="province">省份</string>
    <string name="today_wea">今日天气</string>
    <string name="qiweng">气温：</string>
    <string name="jinri">今日天气实况</string>
    <string name="fengli">风力：</string>
    <string name="shidu">湿度：</string>
    <string name="kongqi">空气质量：</string>
    <string name="zhiwai">紫外线强度：</string>
    <color name="white">#FFFFFF</color>
    <string name="city_str">城</string>
    <string name="xiaotieshi">今日小贴士今日小贴士今日小贴士今日小贴士今日小贴士</string>
    



    <string name="btn_in_14443a">ISO14443A</string>
    <string name="btn_in_15693">ISO15693</string>
    <string name="btn_in_2ndGID">Read China Second Generation ID card\'s UID</string>
    <string name="btn_in_ultralight">ISO14443A Ultralight C</string>
    <string name="text_main">Please choose a protocol</string>
    <string name="text_null"></string>
    <string name="btn_set">READ</string>
    <string name="msg_error_input">Input is error</string>
    <string name="msg_error_dev">找不到读卡设备！ Open device error!</string>
    <string name="msg_error_power">找不到读卡设备！ Open device error!</string>
    <string name="msg_start">Work start, please wait</string>
    <string name="text_serial">Serial</string>
    <string name="text_power">Power</string>
    <string name="btn_confirm">OK</string>
 
    
    
    
    <string name="text_mifare_prompt">Please input a block number to read</string>
    <string name="msg_mifare_error_dev">Open device error!</string>
    <string name="msg_mifare_error_block">Input number is out of Mifare Classic block range</string>
    <string name="msg_mifare_error_nocard">No card found</string>
    <string name="msg_mifare_error_auth">Authentication block failed</string>
    <string name="msg_mifare_error_readvalue">Read value failed</string>
    <string name="msg_mifare_error_writevalue">Write value failed</string>
    <string name="msg_mifare_error_readblock">Read block data failed</string>
    <string name="msg_mifare_error_writeblock">Write block data failed</string>
    <string name="msg_mifare_error_incvalue">Increment value failed</string>
    <string name="msg_mifare_error_decvalue">Decrement value failed</string>
    <string name="msg_mifare_error_haltcard">Halt card failed</string>
    <string name="msg_mifare_error_compatibility_read">write repeat data from block err, </string>
    <string name="msg_mifare_ok_findcard">Find a card, ID is </string>
    <string name="msg_mifare_ok_auth">Authentication block ok</string>
    <string name="msg_mifare_ok_writeblock">Write data to block ok, data is</string>
    <string name="msg_mifare_ok_readblock">Read data from block ok, result is</string>
    <string name="msg_mifare_ok_writevalue">Write value to block ok, value is</string>
    <string name="msg_mifare_ok_readvalue">Read value from block ok, result is</string>
    <string name="msg_mifare_ok_incvalue">Successfully increment block\'s value of</string>
    <string name="msg_mifare_ok_decvalue">Successfully decrement block\'s value of</string>
    <string name="msg_mifare_ok_haltcard">Halt current card ok</string>
    <string name="msg_mifare_ok_allok">Test over</string>
	<string name="msg_mifare_ok_compatibility_read">compatibility write data block ok, date is</string>
    
    <string name="ckb_15693_lockblock">Lock Block</string>
    <string name="ckb_15693_lockafi">Lock AFI</string>
    <string name="ckb_15693_lockdsfid">Lock DSFID</string>
    <string name="text_15693_selectitem">Select Test Item</string>
    <string name="text_15693_prompt">Input a block number to demo</string>
    <string name="btn_15693_getinfo">Search</string>
    
    <string name="btn_2ndGID_info">Read China Second Generation ID card\'s UID</string>
    
</resources>