<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/v5_0_1_topbar"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btnFun"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/v5_0_1_flipper_head_menu" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/lyBack"
            android:background="@drawable/v5_0_1_flipper_head_separator" />

        <ImageView
            android:id="@+id/iV"
            android:layout_width="5dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnFun" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView3"
            android:paddingLeft="10dp"
            android:text="Iso15693_native"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:id="@+id/lyBack"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back_arr" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_15693_cardinfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:textColor="#000000"
                android:text="@string/text_null" />

            <Button
                android:id="@+id/button_15693_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_15693_getinfo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                 android:textColor="#000000"
                android:text="@string/text_15693_prompt" />

            <EditText
                android:id="@+id/editText_15693_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button_15693_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_set" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.31"
                 android:textColor="#000000"
                android:text="@string/text_15693_selectitem" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockblock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckb_15693_lockblock" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockafi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckb_15693_lockafi" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockdsfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckb_15693_lockdsfid" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_15693_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
             android:textColor="#000000"
            android:text="@string/text_null" />
    </LinearLayout>

</LinearLayout>